user & group specification modify
